src/bin/snapshots/snapshots__WhereClause.lifetime-t.input.snap
---
created: "2019-08-25T01:01:24.734027155Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    WhereClause {
        bounds: [
            WhereBound::Lifetime {
                lt: _,
                bounds: [
                    LifetimeBound {
                        outlives: _,
                    },
                ],
            } | WhereBound::Type {
                ty: Type::DynTrait {
                    bounds: [
                        TypeBound::Outlives,
                    ],
                },
                bounds: [
                    TypeBound::Outlives,
                ],
            },
        ],
    },
)
