src/bin/snapshots/snapshots__WhereClause.type-multi-t.input.snap
---
created: "2019-06-02T14:56:55.367610Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    WhereClause {
        bounds: [
            WhereBound::Type {
                bounds: [
                    TypeBound::Trait(
                        TypeTraitBound {
                            path: Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        },
                    ),
                    TypeBound::Trait(
                        TypeTraitBound {
                            path: Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        },
                    ),
                ],
                ty: Type::Path(
                    QPath::Unqualified(
                        Path {
                            path: RelativePath {
                                segments: [
                                    PathSegment {
                                        ident: _,
                                    },
                                ],
                            },
                        },
                    ),
                ) | Type::DynTrait {
                    bounds: [
                        TypeBound::Trait(
                            TypeTraitBound {
                                path: Path {
                                    path: RelativePath {
                                        segments: [
                                            PathSegment {
                                                ident: _,
                                            },
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
)
