src/bin/snapshots/snapshots__WhereClause.type-multi.input.snap
---
created: "2019-08-25T01:01:21.824851653Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    WhereClause {
        bounds: [
            WhereBound::Type {
                ty: Type::Path(
                    QPath::Unqualified(
                        Path {
                            path: RelativePath {
                                segments: [
                                    PathSegment {
                                        ident: _,
                                    },
                                ],
                            },
                        },
                    ),
                ) | Type::DynTrait {
                    bounds: [
                        TypeBound::Trait(
                            TypeTraitBound {
                                path: Path {
                                    path: RelativePath {
                                        segments: [
                                            PathSegment {
                                                ident: _,
                                            },
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
                bounds: [
                    TypeBound::Trait(
                        TypeTraitBound {
                            path: Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        },
                    ),
                    TypeBound::Trait(
                        TypeTraitBound {
                            path: Path {
                                path: RelativePath {
                                    segments: [
                                        PathSegment {
                                            ident: _,
                                        },
                                    ],
                                },
                            },
                        },
                    ),
                ],
            },
        ],
    },
)
